Switch notebooks 4-6 to PMM

--- a/04-create_erosion_distribution_global.ipynb
+++ b/04-create_erosion_distribution_global.ipynb
@@ -1,6 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "03137675",
+   "metadata": {},
+   "source": [
+    "# Cumulative erosion\n",
+    "\n",
+    "This notebook fits a parametric (gamma) distribution to the cumulative erosion values extracted from the landscape evolution model.\n",
+    "\n",
+    "If training data has been extracted from the source datasets by running the `00c-extract_training_data_global.ipynb` and `00b-extract_grid_data.ipynb` notebooks, set the `use_extracted_data` variable below to `True` to use this dataset instead of the pre-prepared training data from the [Zenodo repository](https://zenodo.org/record/8157691)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00f399ef",
+   "metadata": {},
+   "source": [
+    "## Notebook options\n",
+    "\n",
+    "These cells set some of the important variables and definitions used throughout the notebook."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "15741578",
@@ -22,7 +44,101 @@
    },
    "outputs": [],
    "source": [
-    "use_extracted_data = False"
+    "# If True, use training data extracted in notebook 00c\n",
+    "# Else, use pre-prepared training data downloaded from Zenodo\n",
+    "use_extracted_data = True\n",
+    "\n",
+    "# Number of processes to use\n",
+    "n_jobs = 4\n",
+    "\n",
+    "# Timespan for analysis\n",
+    "min_time = 0\n",
+    "max_time = 170\n",
+    "\n",
+    "# Remove outliers before fitting distribution (this value usually works fairly well)\n",
+    "outlier_contamination = 0.06\n",
+    "\n",
+    "# Control randomness by setting random_state to a constant\n",
+    "random_state = 1234\n",
+    "\n",
+    "# Control verbosity level of logging output\n",
+    "verbose = False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45979812",
+   "metadata": {},
+   "source": [
+    "These values will usually not need to be modified:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3dd3ed0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from lib.check_files import check_prepared_data\n",
+    "\n",
+    "if use_extracted_data:\n",
+    "    data_dir = \"extracted_data\"\n",
+    "else:\n",
+    "    data_dir = check_prepared_data(\"prepared_data\", verbose=True)\n",
+    "\n",
+    "output_dir = \"outputs\"\n",
+    "\n",
+    "dist_name = \"gengamma\"\n",
+    "failure = \"raise\"  # or \"ignore\"\n",
+    "\n",
+    "gengamma_bounds = {\n",
+    "    \"a\": (0, 50),\n",
+    "    \"c\": (-50, 50),\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6eaaa578",
+   "metadata": {},
+   "source": [
+    "If any of the following exist as environment variables, they will replace the values defined above:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e5583f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "n_jobs = int(os.environ.get(\"N_JOBS\", n_jobs))\n",
+    "min_time = int(os.environ.get(\"MIN_TIME\", min_time))\n",
+    "max_time = int(os.environ.get(\"MAX_TIME\", max_time))\n",
+    "random_state = int(os.environ.get(\"RANDOM_STATE\", random_state))\n",
+    "outlier_contamination = float(os.environ.get(\"OUTLIER_CONTAMINATION\", outlier_contamination))\n",
+    "verbose = bool(int(os.environ.get(\"VERBOSE\", verbose)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9cb4deeb",
+   "metadata": {},
+   "source": [
+    "## Notebook setup\n",
+    "\n",
+    "Imports, definitions, etc."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9dad4dab",
+   "metadata": {},
+   "source": [
+    "### Imports"
    ]
   },
   {
@@ -47,7 +163,6 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
     "import warnings\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
@@ -59,47 +174,16 @@
     "    fit,\n",
     "    gengamma,\n",
     ")\n",
-    "from sklearn.neighbors import KernelDensity\n",
     "\n",
-    "from lib.check_files import check_prepared_data\n",
     "from lib.erodep import clean_outliers"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "db65221e",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-05-10T05:22:06.323269Z",
-     "iopub.status.busy": "2024-05-10T05:22:06.322885Z",
-     "iopub.status.idle": "2024-05-10T05:22:06.327408Z",
-     "shell.execute_reply": "2024-05-10T05:22:06.326857Z"
-    },
-    "papermill": {
-     "duration": 0.009551,
-     "end_time": "2024-05-10T05:22:06.329061",
-     "exception": false,
-     "start_time": "2024-05-10T05:22:06.319510",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "e6a8f10c",
+   "metadata": {},
    "source": [
-    "n_jobs = int(os.environ.get(\"N_JOBS\", 8))\n",
-    "kde_bandwidth = int(os.environ.get(\"BANDWIDTH\", 1000))\n",
-    "random_state = int(os.environ.get(\"RANDOM_STATE\", 1234))\n",
-    "outlier_contamination = float(os.environ.get(\"CONTAMINATION\", 0.06))\n",
-    "verbose = bool(int(os.environ.get(\"VERBOSE\", 0)))\n",
-    "\n",
-    "dist_name = \"gengamma\"\n",
-    "failure = \"raise\"  # or \"ignore\"\n",
-    "\n",
-    "gengamma_bounds = {\n",
-    "    \"a\": (0, 50),\n",
-    "    \"c\": (-50, 50),\n",
-    "}"
+    "### Input and output files"
    ]
   },
   {
@@ -124,18 +208,22 @@
    },
    "outputs": [],
    "source": [
-    "if use_extracted_data:\n",
-    "    data_dir = \"extracted_data\"\n",
-    "else:\n",
-    "    data_dir = \"prepared_data\"\n",
-    "    check_prepared_data(data_dir)\n",
     "data_filename = os.path.join(data_dir, \"training_data_global.csv\")\n",
     "\n",
-    "outputs_dir = os.path.join(\"outputs\", \"global\")\n",
-    "output_parametric = os.path.join(outputs_dir, \"erodep_dist_parametric.joblib\")\n",
-    "output_kde = os.path.join(outputs_dir, \"erodep_dist_kde.joblib\")\n",
-    "output_hist = os.path.join(outputs_dir, \"erodep_dists.png\")\n",
-    "output_scatter = os.path.join(outputs_dir, \"erodep_scatter.png\")"
+    "output_dir = os.path.join(output_dir, \"global\")\n",
+    "output_parametric = os.path.join(output_dir, \"erodep_dist.joblib\")\n",
+    "output_hist = os.path.join(output_dir, \"erodep_dist.png\")\n",
+    "output_scatter = os.path.join(output_dir, \"erodep_scatter.png\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ec2fb1e",
+   "metadata": {},
+   "source": [
+    "## Load data and fit distribution\n",
+    "\n",
+    "The distribution will be saved as a `.joblib` file in the output directory."
    ]
   },
   {
@@ -161,6 +249,10 @@
    "outputs": [],
    "source": [
     "df = pd.read_csv(data_filename)\n",
+    "df = df[\n",
+    "    (df[\"age (Ma)\"] <= max_time)\n",
+    "    & (df[\"age (Ma)\"] >= min_time)\n",
+    "]\n",
     "positives = df[df[\"label\"] == \"positive\"]\n",
     "unlabelled = df[df[\"label\"] == \"unlabelled\"]\n",
     "\n",
@@ -261,50 +353,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "5e97d97d",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-05-10T05:22:07.038453Z",
-     "iopub.status.busy": "2024-05-10T05:22:07.038256Z",
-     "iopub.status.idle": "2024-05-10T05:22:07.059171Z",
-     "shell.execute_reply": "2024-05-10T05:22:07.058721Z"
-    },
-    "papermill": {
-     "duration": 0.024903,
-     "end_time": "2024-05-10T05:22:07.060536",
-     "exception": false,
-     "start_time": "2024-05-10T05:22:07.035633",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Kernel density estimate (KDE; bandwidth = 1000): NLL = 4774\n",
-      "Writing KDE distribution to file: outputs/global/erodep_dist_kde.joblib\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "id": "a184469f",
+   "metadata": {},
    "source": [
-    "kde = KernelDensity(\n",
-    "    kernel=\"gaussian\",\n",
-    "    bandwidth=kde_bandwidth,\n",
-    ").fit(x_cleaned.reshape((-1, 1)))\n",
-    "nll_kde = -1 * kde.score(x_cleaned.reshape((-1, 1)))\n",
+    "## Plots\n",
     "\n",
-    "dump(kde, output_kde, compress=True)\n",
-    "if verbose:\n",
-    "    print(\n",
-    "        f\"Kernel density estimate (KDE; bandwidth = {kde_bandwidth}): NLL = {nll_kde:0.0f}\"\n",
-    "    )\n",
-    "    print(\n",
-    "        f\"\"\"Writing KDE distribution to file: {output_kde}\"\"\"\n",
-    "    )"
+    "Plots will be saved to the output directory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "614eba8d",
+   "metadata": {},
+   "source": [
+    "### Distribution plot"
    ]
   },
   {
@@ -346,7 +409,6 @@
     "    500,\n",
     ")\n",
     "y_parametric = dist_parametric.pdf(dist_x)\n",
-    "# y_kde = np.exp(kde.score_samples(dist_x.reshape((-1, 1))))\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "nbins = 30\n",
@@ -386,6 +448,16 @@
     "ax.set_xlim(0, positives[\"erosion (m)\"].quantile(0.99))\n",
     "ax.legend(loc=\"best\")\n",
     "fig.savefig(output_hist, dpi=400, bbox_inches=\"tight\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffc7c250",
+   "metadata": {},
+   "source": [
+    "### Scatter plot\n",
+    "\n",
+    "Plot deposit age v. cumulative erosion, grouped by region."
    ]
   },
   {
