--- a/05-create_preservation_maps.ipynb
+++ b/05-create_preservation_maps.ipynb
@@ -1,6 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7f6878b3",
+   "metadata": {},
+   "source": [
+    "# Preservation potential grids\n",
+    "\n",
+    "This notebook converts the cumulative erosion values at the grid point locations to true netCDF format grids of preservation potential, using the parametric distribution fitted in notebook `04`.\n",
+    "\n",
+    "If training data has been extracted from the source datasets by running the `00c-extract_training_data_global.ipynb` and `00b-extract_grid_data.ipynb` notebooks, set the `use_extracted_data` variable below to `True` to use this dataset instead of the pre-prepared training data from the [Zenodo repository](https://zenodo.org/record/8157691)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb19728e",
+   "metadata": {},
+   "source": [
+    "## Notebook options\n",
+    "\n",
+    "These cells set some of the important variables and definitions used throughout the notebook."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "5575cb58",
@@ -22,7 +44,79 @@
    },
    "outputs": [],
    "source": [
-    "use_extracted_data = False"
+    "# If True, use training data extracted in notebook 00c\n",
+    "# Else, use pre-prepared training data downloaded from Zenodo\n",
+    "use_extracted_data = True\n",
+    "\n",
+    "# Number of processes to use\n",
+    "n_jobs = 4\n",
+    "\n",
+    "# Control verbosity level of logging output\n",
+    "verbose = False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e027d1c4",
+   "metadata": {},
+   "source": [
+    "These values will usually not need to be modified:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "790680ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from lib.check_files import check_prepared_data\n",
+    "\n",
+    "if use_extracted_data:\n",
+    "    data_dir = \"extracted_data\"\n",
+    "else:\n",
+    "    data_dir = check_prepared_data(\"prepared_data\")\n",
+    "\n",
+    "outputs_dir = \"outputs\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adb0c6c1",
+   "metadata": {},
+   "source": [
+    "If any of the following exist as environment variables, they will replace the values defined above:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af58fc81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "n_jobs = int(os.environ.get(\"N_JOBS\", n_jobs))\n",
+    "verbose = bool(int(os.environ.get(\"VERBOSE\", verbose)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "732a5a55",
+   "metadata": {},
+   "source": [
+    "## Notebook setup\n",
+    "\n",
+    "Imports, definitions, etc."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d5bf441",
+   "metadata": {},
+   "source": [
+    "### Imports"
    ]
   },
   {
@@ -48,41 +142,13 @@
    "outputs": [],
    "source": [
     "import glob\n",
-    "import os\n",
     "\n",
     "import joblib\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from gplately import Raster\n",
     "\n",
-    "from lib.check_files import check_prepared_data\n",
-    "from lib.pu import create_grids\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "42d9b927",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-05-10T05:22:17.944242Z",
-     "iopub.status.busy": "2024-05-10T05:22:17.943917Z",
-     "iopub.status.idle": "2024-05-10T05:22:17.946829Z",
-     "shell.execute_reply": "2024-05-10T05:22:17.946406Z"
-    },
-    "papermill": {
-     "duration": 0.006539,
-     "end_time": "2024-05-10T05:22:17.948104",
-     "exception": false,
-     "start_time": "2024-05-10T05:22:17.941565",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "verbose = bool(int(os.environ.get(\"VERBOSE\", 1)))\n",
-    "n_jobs = int(os.environ.get(\"N_JOBS\", 8))"
+    "from lib.pu import create_grids"
    ]
   },
   {
@@ -99,7 +165,7 @@
     "tags": []
    },
    "source": [
-    "## Input and output files"
+    "### Input and output files"
    ]
   },
   {
@@ -124,23 +190,13 @@
    },
    "outputs": [],
    "source": [
-    "# Input\n",
-    "if use_extracted_data:\n",
-    "    data_dir = \"extracted_data\"\n",
-    "else:\n",
-    "    data_dir = check_prepared_data(\"prepared_data\")\n",
     "data_filename = os.path.join(data_dir, \"grid_data.csv\")\n",
     "\n",
     "outputs_dir = \"outputs\"\n",
     "dist_parametric_filename = os.path.join(\n",
     "    outputs_dir,\n",
     "    \"global\",\n",
-    "    \"erodep_dist_parametric.joblib\",\n",
-    ")\n",
-    "dist_kde_filename = os.path.join(\n",
-    "    outputs_dir,\n",
-    "    \"global\",\n",
-    "    \"erodep_dist_kde.joblib\",\n",
+    "    \"erodep_dist.joblib\",\n",
     ")\n",
     "\n",
     "# Output\n",
@@ -153,22 +209,26 @@
     "    outputs_dir,\n",
     "    \"erosion_grids\",\n",
     ")\n",
-    "likelihood_parametric_dir = os.path.join(\n",
+    "likelihood_dir = os.path.join(\n",
     "    outputs_dir,\n",
     "    \"global\",\n",
-    "    \"preservation_likelihood_grids_parametric\",\n",
-    ")\n",
-    "likelihood_kde_dir = os.path.join(\n",
-    "    outputs_dir,\n",
-    "    \"global\",\n",
-    "    \"preservation_likelihood_grids_kde\",\n",
+    "    \"preservation_likelihood_grids\",\n",
     ")\n",
     "for i in (\n",
     "    erodep_grid_dir,\n",
-    "    likelihood_parametric_dir,\n",
-    "    likelihood_kde_dir,\n",
+    "    likelihood_dir,\n",
     "):\n",
     "    os.makedirs(i, exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1782b6b5",
+   "metadata": {},
+   "source": [
+    "### Load data and calculate likelihood\n",
+    "\n",
+    "The likelihood point values will be saved to a `.csv` file in the output directory."
    ]
   },
   {
@@ -217,21 +277,7 @@
     "        + dist_parametric_filename\n",
     "    )\n",
     "dist_parametric = joblib.load(dist_parametric_filename)\n",
-    "data[\"likelihood_parametric\"] = dist_parametric.pdf(data[\"erosion (m)\"])\n",
-    "\n",
-    "if verbose:\n",
-    "    print(\n",
-    "        \"Loading KDE distribution from file: \"\n",
-    "        + dist_kde_filename\n",
-    "    )\n",
-    "dist_kde = joblib.load(dist_kde_filename)\n",
-    "valid_inds_kde = data.index[~np.isnan(data[\"erosion (m)\"])]\n",
-    "x_kde = np.reshape(data.loc[valid_inds_kde, \"erosion (m)\"], (-1, 1))\n",
-    "lh_kde = np.exp(dist_kde.score_samples(x_kde))\n",
-    "data[\"likelihood_kde\"] = np.nan\n",
-    "for i, lh in zip(valid_inds_kde, lh_kde):\n",
-    "    data.at[i, \"likelihood_kde\"] = lh\n",
-    "del x_kde, lh_kde, valid_inds_kde\n",
+    "data[\"likelihood\"] = dist_parametric.pdf(data[\"erosion (m)\"])\n",
     "\n",
     "data.to_csv(output_filename_points, index=False)"
    ]
@@ -250,7 +296,9 @@
     "tags": []
    },
    "source": [
-    "## Create grids"
+    "## Create grids\n",
+    "\n",
+    "In this section, the different types of output grids are created."
    ]
   },
   {
@@ -2007,44 +2055,19 @@
     "    likelihood_basename = os.path.basename(\n",
     "        erodep_filename\n",
     "    ).replace(\"erosion_grid\", \"preservation_likelihood_grid\")\n",
-    "    likelihood_parametric_filename = os.path.join(\n",
-    "        likelihood_parametric_dir,\n",
-    "        likelihood_basename,\n",
-    "    )\n",
-    "    likelihood_kde_filename = os.path.join(\n",
-    "        likelihood_kde_dir,\n",
+    "    likelihood_filename = os.path.join(\n",
+    "        likelihood_dir,\n",
     "        likelihood_basename,\n",
     "    )\n",
     "\n",
     "    erodep_raster = Raster(erodep_filename)\n",
     "\n",
-    "    likelihood_parametric = Raster(dist_parametric.pdf(erodep_raster))\n",
+    "    likelihood = Raster(dist_parametric.pdf(erodep_raster))\n",
     "    if verbose:\n",
     "        print(\n",
-    "            f\" - Writing parametric file: {likelihood_basename}\"\n",
+    "            f\" - Writing likelihood file: {likelihood_basename}\"\n",
     "        )\n",
-    "    likelihood_parametric.save_to_netcdf4(likelihood_parametric_filename)\n",
-    "    del likelihood_parametric\n",
-    "\n",
-    "    likelihood_kde = np.full_like(erodep_raster.data, np.nan)\n",
-    "    mask_kde = np.isnan(np.array(erodep_raster.data))\n",
-    "    if mask_kde.mean() < 1.0:\n",
-    "        kde_input = np.reshape(\n",
-    "            np.array(erodep_raster.data[~mask_kde]),\n",
-    "            (-1, 1),\n",
-    "        )\n",
-    "        likelihood_kde[~mask_kde] = np.ravel(\n",
-    "            np.exp(\n",
-    "                dist_kde.score_samples(kde_input)\n",
-    "            )\n",
-    "        )\n",
-    "    likelihood_kde = Raster(likelihood_kde)\n",
-    "    if verbose:\n",
-    "        print(\n",
-    "            f\" - Writing KDE file: {likelihood_basename}\"\n",
-    "        )\n",
-    "    likelihood_kde.save_to_netcdf4(likelihood_kde_filename)\n",
-    "    del likelihood_kde"
+    "    likelihood.save_to_netcdf4(likelihood_filename)"
    ]
   },
   {
