Update erodep file path

--- a/06-create_preservation_animations.ipynb
+++ b/06-create_preservation_animations.ipynb
@@ -90,6 +90,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "from lib.check_files import check_prepared_data\n",
     "\n",
     "if use_extracted_data:\n",
@@ -98,7 +100,9 @@
     "    data_dir = check_prepared_data(\"prepared_data\")\n",
     "\n",
     "outputs_dir = \"outputs\"\n",
-    "filename_template = r\"image_{:0.0f}Ma.png\""
+    "filename_template = r\"image_{:0.0f}Ma.png\"\n",
+    "\n",
+    "erorate_dir = os.path.join(\"source_data\", \"ErosionDeposition\")"
    ]
   },
   {
@@ -116,8 +120,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "\n",
     "n_jobs = int(os.environ.get(\"N_JOBS\", n_jobs))\n",
     "verbose = bool(int(os.environ.get(\"VERBOSE\", verbose)))"
    ]
@@ -246,7 +248,6 @@
     "    \"training_data_global.csv\",\n",
     ")\n",
     "erosion_grids_dir = os.path.join(outputs_dir, \"erosion_grids\")\n",
-    "erorate_dir = \"erodep_maps\"\n",
     "outputs_dir = os.path.join(outputs_dir, \"global\")\n",
     "\n",
     "# Determine time steps\n",
