Fix typo in notebook 00b

--- a/00b-extract_grid_data.ipynb
+++ b/00b-extract_grid_data.ipynb
@@ -112,7 +112,7 @@
     "import os\n",
     "\n",
     "# Override above values with environment variables, if they exist\n",
-    "grid_resolution = float(os.environ.get(\"GRID_RESOLUTION\"), grid_resolution)\n",
+    "grid_resolution = float(os.environ.get(\"GRID_RESOLUTION\", grid_resolution))\n",
     "n_jobs = int(os.environ.get(\"N_JOBS\", n_jobs))\n",
     "overwrite = bool(int(os.environ.get(\"OVERWRITE\", overwrite)))\n",
     "min_time = int(os.environ.get(\"MIN_TIME\", min_time))\n",
