Run notebooks with changes

--- a/02a-create_probability_maps_global.ipynb
+++ b/02a-create_probability_maps_global.ipynb
@@ -6,10 +6,10 @@
    "id": "80263a75",
    "metadata": {
     "papermill": {
-     "duration": 0.005124,
-     "end_time": "2024-06-14T14:31:20.052530",
+     "duration": 0.005388,
+     "end_time": "2024-06-20T13:11:42.410136",
      "exception": false,
-     "start_time": "2024-06-14T14:31:20.047406",
+     "start_time": "2024-06-20T13:11:42.404748",
      "status": "completed"
     },
     "tags": []
@@ -25,10 +25,10 @@
    "id": "36e80d65",
    "metadata": {
     "papermill": {
-     "duration": 0.002797,
-     "end_time": "2024-06-14T14:31:20.058557",
+     "duration": 0.003109,
+     "end_time": "2024-06-20T13:11:42.416704",
      "exception": false,
-     "start_time": "2024-06-14T14:31:20.055760",
+     "start_time": "2024-06-20T13:11:42.413595",
      "status": "completed"
     },
     "tags": []
@@ -45,16 +45,16 @@
    "id": "9057911b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-14T14:31:20.064789Z",
-     "iopub.status.busy": "2024-06-14T14:31:20.064523Z",
-     "iopub.status.idle": "2024-06-14T14:31:20.070938Z",
-     "shell.execute_reply": "2024-06-14T14:31:20.070414Z"
+     "iopub.execute_input": "2024-06-20T13:11:42.425879Z",
+     "iopub.status.busy": "2024-06-20T13:11:42.425569Z",
+     "iopub.status.idle": "2024-06-20T13:11:42.432684Z",
+     "shell.execute_reply": "2024-06-20T13:11:42.432001Z"
     },
     "papermill": {
-     "duration": 0.011595,
-     "end_time": "2024-06-14T14:31:20.072626",
+     "duration": 0.01386,
+     "end_time": "2024-06-20T13:11:42.434437",
      "exception": false,
-     "start_time": "2024-06-14T14:31:20.061031",
+     "start_time": "2024-06-20T13:11:42.420577",
      "status": "completed"
     },
     "tags": []
@@ -80,10 +80,10 @@
    "id": "6bcc106f",
    "metadata": {
     "papermill": {
-     "duration": 0.002503,
-     "end_time": "2024-06-14T14:31:20.077949",
+     "duration": 0.002556,
+     "end_time": "2024-06-20T13:11:42.440189",
      "exception": false,
-     "start_time": "2024-06-14T14:31:20.075446",
+     "start_time": "2024-06-20T13:11:42.437633",
      "status": "completed"
     },
     "tags": []
@@ -98,16 +98,16 @@
    "id": "40a511d9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-14T14:31:20.083996Z",
-     "iopub.status.busy": "2024-06-14T14:31:20.083752Z",
-     "iopub.status.idle": "2024-06-14T14:31:20.231991Z",
-     "shell.execute_reply": "2024-06-14T14:31:20.231237Z"
+     "iopub.execute_input": "2024-06-20T13:11:42.446262Z",
+     "iopub.status.busy": "2024-06-20T13:11:42.446016Z",
+     "iopub.status.idle": "2024-06-20T13:11:42.499967Z",
+     "shell.execute_reply": "2024-06-20T13:11:42.499393Z"
     },
     "papermill": {
-     "duration": 0.153973,
-     "end_time": "2024-06-14T14:31:20.234451",
+     "duration": 0.0588,
+     "end_time": "2024-06-20T13:11:42.501513",
      "exception": false,
-     "start_time": "2024-06-14T14:31:20.080478",
+     "start_time": "2024-06-20T13:11:42.442713",
      "status": "completed"
     },
     "tags": []
@@ -131,10 +131,10 @@
    "id": "2efa9d67",
    "metadata": {
     "papermill": {
-     "duration": 0.003046,
-     "end_time": "2024-06-14T14:31:20.240816",
+     "duration": 0.002663,
+     "end_time": "2024-06-20T13:11:42.507362",
      "exception": false,
-     "start_time": "2024-06-14T14:31:20.237770",
+     "start_time": "2024-06-20T13:11:42.504699",
      "status": "completed"
     },
     "tags": []
@@ -149,16 +149,16 @@
    "id": "f2d69c31",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-14T14:31:20.248082Z",
-     "iopub.status.busy": "2024-06-14T14:31:20.247817Z",
-     "iopub.status.idle": "2024-06-14T14:31:20.251858Z",
-     "shell.execute_reply": "2024-06-14T14:31:20.251203Z"
+     "iopub.execute_input": "2024-06-20T13:11:42.512658Z",
+     "iopub.status.busy": "2024-06-20T13:11:42.512384Z",
+     "iopub.status.idle": "2024-06-20T13:11:42.516237Z",
+     "shell.execute_reply": "2024-06-20T13:11:42.515803Z"
     },
     "papermill": {
-     "duration": 0.009606,
-     "end_time": "2024-06-14T14:31:20.253414",
+     "duration": 0.008043,
+     "end_time": "2024-06-20T13:11:42.517722",
      "exception": false,
-     "start_time": "2024-06-14T14:31:20.243808",
+     "start_time": "2024-06-20T13:11:42.509679",
      "status": "completed"
     },
     "tags": []
@@ -176,10 +176,10 @@
    "id": "544fcfcf",
    "metadata": {
     "papermill": {
-     "duration": 0.002488,
-     "end_time": "2024-06-14T14:31:20.258556",
+     "duration": 0.00199,
+     "end_time": "2024-06-20T13:11:42.521956",
      "exception": false,
-     "start_time": "2024-06-14T14:31:20.256068",
+     "start_time": "2024-06-20T13:11:42.519966",
      "status": "completed"
     },
     "tags": []
@@ -195,10 +195,10 @@
    "id": "dca6800a",
    "metadata": {
     "papermill": {
-     "duration": 0.002425,
-     "end_time": "2024-06-14T14:31:20.263445",
+     "duration": 0.003125,
+     "end_time": "2024-06-20T13:11:42.527035",
      "exception": false,
-     "start_time": "2024-06-14T14:31:20.261020",
+     "start_time": "2024-06-20T13:11:42.523910",
      "status": "completed"
     },
     "tags": []
@@ -213,16 +213,16 @@
    "id": "5303979d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-14T14:31:20.269948Z",
-     "iopub.status.busy": "2024-06-14T14:31:20.269610Z",
-     "iopub.status.idle": "2024-06-14T14:31:25.343316Z",
-     "shell.execute_reply": "2024-06-14T14:31:25.342477Z"
+     "iopub.execute_input": "2024-06-20T13:11:42.532676Z",
+     "iopub.status.busy": "2024-06-20T13:11:42.532375Z",
+     "iopub.status.idle": "2024-06-20T13:11:46.516065Z",
+     "shell.execute_reply": "2024-06-20T13:11:46.515469Z"
     },
     "papermill": {
-     "duration": 5.07942,
-     "end_time": "2024-06-14T14:31:25.345370",
+     "duration": 3.988367,
+     "end_time": "2024-06-20T13:11:46.517604",
      "exception": false,
-     "start_time": "2024-06-14T14:31:20.265950",
+     "start_time": "2024-06-20T13:11:42.529237",
      "status": "completed"
     },
     "tags": []
@@ -245,10 +245,10 @@
    "id": "ae9cc890",
    "metadata": {
     "papermill": {
-     "duration": 0.003069,
-     "end_time": "2024-06-14T14:31:25.351908",
+     "duration": 0.00326,
+     "end_time": "2024-06-20T13:11:46.523156",
      "exception": false,
-     "start_time": "2024-06-14T14:31:25.348839",
+     "start_time": "2024-06-20T13:11:46.519896",
      "status": "completed"
     },
     "tags": []
@@ -263,16 +263,16 @@
    "id": "7342050e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-14T14:31:25.359208Z",
-     "iopub.status.busy": "2024-06-14T14:31:25.358719Z",
-     "iopub.status.idle": "2024-06-14T14:31:25.365170Z",
-     "shell.execute_reply": "2024-06-14T14:31:25.364687Z"
+     "iopub.execute_input": "2024-06-20T13:11:46.532021Z",
+     "iopub.status.busy": "2024-06-20T13:11:46.531524Z",
+     "iopub.status.idle": "2024-06-20T13:11:46.538064Z",
+     "shell.execute_reply": "2024-06-20T13:11:46.537563Z"
     },
     "papermill": {
-     "duration": 0.011935,
-     "end_time": "2024-06-14T14:31:25.366810",
+     "duration": 0.012046,
+     "end_time": "2024-06-20T13:11:46.539644",
      "exception": false,
-     "start_time": "2024-06-14T14:31:25.354875",
+     "start_time": "2024-06-20T13:11:46.527598",
      "status": "completed"
     },
     "tags": []
@@ -281,7 +281,7 @@
     {
      "data": {
       "text/plain": [
-       "<dask.config.set at 0x17836e6d0>"
+       "<dask.config.set at 0x17ec54050>"
       ]
      },
      "execution_count": 5,
@@ -299,10 +299,10 @@
    "id": "632c1c44",
    "metadata": {
     "papermill": {
-     "duration": 0.002593,
-     "end_time": "2024-06-14T14:31:25.372165",
+     "duration": 0.002632,
+     "end_time": "2024-06-20T13:11:46.545326",
      "exception": false,
-     "start_time": "2024-06-14T14:31:25.369572",
+     "start_time": "2024-06-20T13:11:46.542694",
      "status": "completed"
     },
     "tags": []
@@ -317,16 +317,16 @@
    "id": "f01bd62d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-14T14:31:25.378259Z",
-     "iopub.status.busy": "2024-06-14T14:31:25.378028Z",
-     "iopub.status.idle": "2024-06-14T14:31:31.099252Z",
-     "shell.execute_reply": "2024-06-14T14:31:31.098542Z"
+     "iopub.execute_input": "2024-06-20T13:11:46.552971Z",
+     "iopub.status.busy": "2024-06-20T13:11:46.552723Z",
+     "iopub.status.idle": "2024-06-20T13:11:51.656725Z",
+     "shell.execute_reply": "2024-06-20T13:11:51.656029Z"
     },
     "papermill": {
-     "duration": 5.72617,
-     "end_time": "2024-06-14T14:31:31.100908",
+     "duration": 5.109225,
+     "end_time": "2024-06-20T13:11:51.658350",
      "exception": false,
-     "start_time": "2024-06-14T14:31:25.374738",
+     "start_time": "2024-06-20T13:11:46.549125",
      "status": "completed"
     },
     "tags": []
@@ -349,10 +349,10 @@
    "id": "dc314a0d",
    "metadata": {
     "papermill": {
-     "duration": 0.002601,
-     "end_time": "2024-06-14T14:31:31.106369",
+     "duration": 0.002594,
+     "end_time": "2024-06-20T13:11:51.663886",
      "exception": false,
-     "start_time": "2024-06-14T14:31:31.103768",
+     "start_time": "2024-06-20T13:11:51.661292",
      "status": "completed"
     },
     "tags": []
@@ -369,16 +369,16 @@
    "id": "5ac247e1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-14T14:31:31.112608Z",
-     "iopub.status.busy": "2024-06-14T14:31:31.112360Z",
-     "iopub.status.idle": "2024-06-14T14:48:26.109147Z",
-     "shell.execute_reply": "2024-06-14T14:48:26.108582Z"
+     "iopub.execute_input": "2024-06-20T13:11:51.672501Z",
+     "iopub.status.busy": "2024-06-20T13:11:51.672225Z",
+     "iopub.status.idle": "2024-06-20T13:28:57.190265Z",
+     "shell.execute_reply": "2024-06-20T13:28:57.189684Z"
     },
     "papermill": {
-     "duration": 1015.004589,
-     "end_time": "2024-06-14T14:48:26.113558",
+     "duration": 1025.527601,
+     "end_time": "2024-06-20T13:28:57.193992",
      "exception": false,
-     "start_time": "2024-06-14T14:31:31.108969",
+     "start_time": "2024-06-20T13:11:51.666391",
      "status": "completed"
     },
     "tags": []
@@ -388,56 +388,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating probabilities for PU model complete (region: global; duration: 0:02:30.159907)\n"
+      "Calculating probabilities for PU model complete (region: global; duration: 0:02:32.916897)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating probabilities for PU model complete (region: North America; duration: 0:02:11.696206)\n"
+      "Calculating probabilities for PU model complete (region: North America; duration: 0:02:20.352261)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating probabilities for PU model complete (region: South America; duration: 0:02:42.454484)\n"
+      "Calculating probabilities for PU model complete (region: South America; duration: 0:02:26.709014)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating probabilities for PU model complete (region: Southeast Asia; duration: 0:02:14.123335)\n"
+      "Calculating probabilities for PU model complete (region: Southeast Asia; duration: 0:02:26.215107)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating probabilities for PU model complete (region: Tethys; duration: 0:02:28.160357)\n"
+      "Calculating probabilities for PU model complete (region: Tethys; duration: 0:02:23.249408)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating probabilities for SVM model complete (region: global; duration: 0:01:39.530009)\n"
+      "Calculating probabilities for SVM model complete (region: global; duration: 0:01:40.374387)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating probabilities for SVM model complete (region: North America; duration: 0:01:32.506113)\n"
+      "Calculating probabilities for SVM model complete (region: North America; duration: 0:01:34.602675)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating probabilities for SVM model complete (region: South America; duration: 0:01:36.355653)\n"
+      "Calculating probabilities for SVM model complete (region: South America; duration: 0:01:41.087536)\n"
      ]
     }
    ],
@@ -519,10 +519,10 @@
    "id": "e94d2cc2",
    "metadata": {
     "papermill": {
-     "duration": 0.002875,
-     "end_time": "2024-06-14T14:48:26.119461",
+     "duration": 0.002924,
+     "end_time": "2024-06-20T13:28:57.199964",
      "exception": false,
-     "start_time": "2024-06-14T14:48:26.116586",
+     "start_time": "2024-06-20T13:28:57.197040",
      "status": "completed"
     },
     "tags": []
@@ -539,16 +539,16 @@
    "id": "23b349d7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-14T14:48:26.126454Z",
-     "iopub.status.busy": "2024-06-14T14:48:26.126213Z",
-     "iopub.status.idle": "2024-06-14T15:44:58.938221Z",
-     "shell.execute_reply": "2024-06-14T15:44:58.937511Z"
+     "iopub.execute_input": "2024-06-20T13:28:57.206635Z",
+     "iopub.status.busy": "2024-06-20T13:28:57.206397Z",
+     "iopub.status.idle": "2024-06-20T15:18:02.328326Z",
+     "shell.execute_reply": "2024-06-20T15:18:02.327831Z"
     },
     "papermill": {
-     "duration": 3392.826074,
-     "end_time": "2024-06-14T15:44:58.948385",
+     "duration": 6545.129384,
+     "end_time": "2024-06-20T15:18:02.332225",
      "exception": false,
-     "start_time": "2024-06-14T14:48:26.122311",
+     "start_time": "2024-06-20T13:28:57.202841",
      "status": "completed"
     },
     "tags": []
@@ -558,56 +558,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating grids for PU model complete (region: global; duration: 0:06:53.203636)\n"
+      "Creating grids for PU model complete (region: global; duration: 0:13:51.905821)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating grids for PU model complete (region: North America; duration: 0:07:02.793216)\n"
+      "Creating grids for PU model complete (region: North America; duration: 0:13:37.224705)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating grids for PU model complete (region: South America; duration: 0:07:05.743790)\n"
+      "Creating grids for PU model complete (region: South America; duration: 0:13:32.963336)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating grids for PU model complete (region: Southeast Asia; duration: 0:07:28.222054)\n"
+      "Creating grids for PU model complete (region: Southeast Asia; duration: 0:13:36.328199)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating grids for PU model complete (region: Tethys; duration: 0:06:58.714136)\n"
+      "Creating grids for PU model complete (region: Tethys; duration: 0:13:40.561762)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating grids for SVM model complete (region: global; duration: 0:07:09.159209)\n"
+      "Creating grids for SVM model complete (region: global; duration: 0:13:30.629772)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating grids for SVM model complete (region: North America; duration: 0:06:56.277588)\n"
+      "Creating grids for SVM model complete (region: North America; duration: 0:13:28.987141)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating grids for SVM model complete (region: South America; duration: 0:06:58.687816)\n"
+      "Creating grids for SVM model complete (region: South America; duration: 0:13:46.512445)\n"
      ]
     }
    ],
@@ -676,10 +676,10 @@
    "id": "d779a208",
    "metadata": {
     "papermill": {
-     "duration": 0.005587,
-     "end_time": "2024-06-14T15:44:58.960028",
+     "duration": 0.003097,
+     "end_time": "2024-06-20T15:18:02.338624",
      "exception": false,
-     "start_time": "2024-06-14T15:44:58.954441",
+     "start_time": "2024-06-20T15:18:02.335527",
      "status": "completed"
     },
     "tags": []
@@ -704,18 +704,18 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.9"
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 4422.967456,
-   "end_time": "2024-06-14T15:45:01.792305",
+   "duration": 7583.427016,
+   "end_time": "2024-06-20T15:18:05.166996",
    "environment_variables": {},
    "exception": null,
-   "input_path": "02a-create_probability_maps_global copy.ipynb",
-   "output_path": "02a-create_probability_maps_global copy.ipynb",
+   "input_path": "02a-create_probability_maps_global.ipynb",
+   "output_path": "02a-create_probability_maps_global.ipynb",
    "parameters": {},
-   "start_time": "2024-06-14T14:31:18.824849",
+   "start_time": "2024-06-20T13:11:41.739980",
    "version": "2.4.0"
   }
  },
